--- a/Laboratories/Lab1/css/lab2.css
+++ b/Laboratories/Lab1/css/lab2.css
@@ -6,8 +6,12 @@
 .ProfileImage{
 	margin-right: 50px;
 }
-.init{
-	text-align: center;
+.personal_info{
+	margin-top: 30px;
+	text-align: center;;
+}
+h3{
+	background-color: #55B3C5;
 }
 .address{
 	font-size: 75%;
@@ -44,9 +48,20 @@
 	height: 100px;
 	border-radius: 50%;
 	position: absolute;
-	top: 20px;
+	top: 25px;
 	right: 0px;
 }
 .technologies{
 	list-style-type:circle;
+}
+.github_icon{
+	width: 30px;
+	height: 30px;
+}
+.github_link{
+	margin-right: 50px;
+}
+.linkedin_icon{
+	width: 30px;
+	height: 30px;
 }
