--- a/Laboratories/Lab3/css/index.css
+++ b/Laboratories/Lab3/css/index.css
@@ -10,8 +10,43 @@ body {
   padding: 0;
 }
 
+.header_container, .container, .product{
+	display: flex;
+}
+
 .logo > img {
   width: 50px;
+}
+
+nav{
+	background-color: #555;
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
+}
+
+.hamburger{
+	float: right;
+	color: white;
+}
+
+.hamburger:hover{
+	cursor : pointer;
+	background-color: #999;
+}
+
+.product{
+	box-sizing: border-box;
+	border: .5px ridge #777;
+	margin-top: 15px;
+	flex-direction: column;
+	align-items: center;
+}
+.product_name, .product_description{
+	margin: 0;
+}
+.product_element{
+	height: fit-content;
 }
 
 .social{
@@ -26,7 +61,7 @@ body {
 }
 
 @media (max-width: 599px){
-	.header_container, .product{
+	.header_container, .container{
 		display: flex;
 		flex-direction: column;
 		align-items: center;
@@ -40,41 +75,10 @@ body {
 	.menu{
 		display: none;
 	}
-
-	nav{
-		background-color: #555;
-		margin: 0;
-		padding: 0;
-		overflow: hidden;
-	}
-
-	.hamburger{
-		float: right;
-		color: white;
-	}
-
-	.hamburger:hover{
-		cursor : pointer;
-		background-color: #999;
-	}
-	.product{
-		box-sizing: border-box;
-  		border: .5px ridge #777;
-  		margin-top: 15px;
-	}
-	.product_name, .product_description{
-		margin: 0;
-	}
-	.product_element{
-		height: fit-content;
-	}
+	
 }
 
 @media(min-width: 600px) and (max-width: 990px){
-	.header_container, .container, .product{
-		display: flex;
-	}
-
 	.header_container{
 		flex-direction: row;
 		height: 50px;
@@ -90,44 +94,14 @@ body {
 		display: none;
 	}
 
-	nav{
-		background-color: #555;
-		margin: 0;
-		padding: 0;
-		overflow: hidden;
-	}
-
-	.hamburger{
-		float: right;
-		color: white;
-	}
-
-	.hamburger:hover{
-		cursor : pointer;
-		background-color: #999;
-	}
-
 	.container{
 		flex-direction: column;
 	}
-
-	.product{
-		flex-direction: column;
-		box-sizing: border-box;
-  		border: .5px ridge #777;
-  		margin-top: 15px;
-  		align-items: center;
-  	}
-
-  	.product_element{
-  		height: : fit-content;
-  	}
 
 }
 
 @media(min-width: 991px){
 	.container, .header_container{
-		display: flex;
 		flex-direction: row;	
 	}
 
@@ -138,8 +112,8 @@ body {
 	}
 
 	.logo{
-		margin-right: 200px;
-		margin-left: 200px;
+		margin-right: 15%;
+		margin-left: 15%;
 	}
 
 	.hamburger{
@@ -171,14 +145,9 @@ body {
 	}
 
 	.product{
-		box-sizing: border-box;
-  		border: .5px ridge #777;
 		width: 33%;
 		height: stretch;
 		margin: 0px 30px 0px 30px;
-		display: flex;
-		flex-direction: column;
-		align-items: center;
 	}
 
 }
