--- a/Laboratories/Lab4/css/styles.css
+++ b/Laboratories/Lab4/css/styles.css
@@ -25,6 +25,10 @@ fieldset{
     margin-top:20px;
 }
 
+ul {
+    list-style-type:none;
+}
+
 .formElement{
     overflow: hidden;
     white-space: nowrap;
